# LLVM_Course

./: .clang-format  .gitignore  CMakeLists.txt  README.md
00-graphics-application/: CMakeLists.txt  README.md
00-graphics-application/IR/: lloyd_relaxation.ll
00-graphics-application/include/: graphics.h
00-graphics-application/include/legacy/: graphics.h
00-graphics-application/src/: graphics.c  lloyd_relaxation.c  main.c
00-graphics-application/src/legacy/: graphics.c
00-graphics_application/: CMakeLists.txt  README.md
00-graphics_application/IR/: lloyd_relaxation.ll
00-graphics_application/include/: graphics.h  line.h  lloyd_relaxation.h
00-graphics_application/src/: graphics.c  line.c  lloyd_relaxation.c  main.c
01-pass/: CMakeLists.txt  README.md  trace_stats.py
01-pass/src/: logger.cpp  pass.cpp
02-ir-builder/: CMakeLists.txt  README.md
02-ir-builder/src/: builder.cpp
application/include/: graphics.h  point.h
application/src/: app.c  graphics.c  line.c  lloyd_relaxation.c  point.c
